# lectito

./: .env.example  .gitattributes  .gitignore  .luarc.json  .prettierrc  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Justfile  README  README.md  TODO.md  docker-compose.yml  dprint.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.md
crates/api/: .env.example  Cargo.toml  README.md  todo.md
crates/api/src/: bucket.lua  error.rs  lib.rs  main.rs  models.rs  rate_limit.rs  tests.rs
crates/cli/: Cargo.toml  README.md  build.rs
crates/cli/fixtures/atproto/: offprint.json
crates/cli/src/: atproto.rs  cli.rs  echo.rs  fetch.rs  fixtures.rs  lib.rs  llms.rs  main.rs  utils.rs
crates/cli/src/atproto/: embeds.rs
crates/cli/src/pdf/: layout.rs  mod.rs  parser.rs  renderer.rs  styler.rs
crates/cli/tests/: cli_tests.rs
crates/core/: Cargo.toml  LICENSE  README.md
crates/core/benches/: extraction.rs
crates/core/src/: article.rs  cleanup.rs  config.rs  diagnostics.rs  dom.rs  dom_tree.rs  error.rs  extract.rs  fetch.rs  html.rs  json_schema.rs  lib.rs  markdown.rs  metadata.rs  normalize.rs  parse.rs  patterns.rs  postprocess.rs  preprocess.rs  readability.rs  readable.rs  recovery.rs  regexes.rs  rules.rs  scoring.rs  serialize.rs  siteconfig_stub.rs  utils.rs
crates/core/src/formatters/: json.rs  markdown.rs  mod.rs  text.rs  toml.rs
crates/core/src/markdown/: code.rs  footnotes.rs  frontmatter.rs  math.rs  media.rs
crates/core/src/rules/: hn.rs
crates/core/src/rules/conf/: github.com.toml  mozilla.org.toml  plato.stanford.edu.toml  readthedocs.io.toml  sre.google.toml  wikipedia.org.toml
crates/core/src/shared/: mod.rs
crates/core/src/siteconfig/: directives.rs  fingerprint.rs  loader.rs  mod.rs  parser.rs  processing.rs  xpath.rs
crates/core/src/siteextractors/: mod.rs
crates/core/tests/: api_tests.rs  extract_regression_fixtures.rs  markdown_confidence_fixtures.rs  preprocess_fixtures.rs  site_extractor_fixtures.rs
crates/fixtures/: Cargo.toml
crates/fixtures/atproto/: leaflet.json  pckt.json
crates/fixtures/samples/test-pages/001/: expected-metadata.json
crates/fixtures/samples/test-pages/002/: expected-metadata.json
crates/fixtures/samples/test-pages/ars-1/: expected-metadata.json
crates/fixtures/samples/test-pages/base-url/: expected-metadata.json
crates/fixtures/samples/test-pages/base-url-base-element/: expected-metadata.json
crates/fixtures/samples/test-pages/base-url-base-element-relative/: expected-metadata.json
crates/fixtures/samples/test-pages/basic-tags-cleaning/: expected-metadata.json
crates/fixtures/samples/test-pages/blogger/: expected-metadata.json
crates/fixtures/samples/test-pages/breitbart/: expected-metadata.json
crates/fixtures/samples/test-pages/buzzfeed-1/: expected-metadata.json
crates/fixtures/samples/test-pages/citylab-1/: expected-metadata.json
crates/fixtures/samples/test-pages/clean-links/: expected-metadata.json
crates/fixtures/samples/test-pages/cnet/: expected-metadata.json
crates/fixtures/samples/test-pages/cnet-svg-classes/: expected-metadata.json
crates/fixtures/samples/test-pages/codeblocks--mdn/: expected-metadata.json  expected.html  source.html
crates/fixtures/samples/test-pages/codeblocks--mintlify-tabs/: expected-metadata.json  expected.html  source.html
crates/fixtures/samples/test-pages/comment-inside-script-parsing/: expected-metadata.json
crates/fixtures/samples/test-pages/dropbox-blog/: expected-metadata.json
crates/fixtures/samples/test-pages/ehow-1/: expected-metadata.json
crates/fixtures/samples/test-pages/ehow-2/: expected-metadata.json
crates/fixtures/samples/test-pages/elements--complex-tables/: expected-metadata.json  expected.html
crates/fixtures/samples/test-pages/elements--data-table/: expected-metadata.json  expected.html
crates/fixtures/samples/test-pages/elements--embedded-videos/: expected-metadata.json  expected.html  source.html
crates/fixtures/samples/test-pages/elements--srcset-normalization/: expected-metadata.json  expected.html  source.html
crates/fixtures/samples/test-pages/embedded-videos/: expected-metadata.json
crates/fixtures/samples/test-pages/engadget/: expected-metadata.json
crates/fixtures/samples/test-pages/firefox-nightly-blog/: expected-metadata.json
crates/fixtures/samples/test-pages/footnotes--google-docs-ftnt/: expected-metadata.json  expected.html  source.html
crates/fixtures/samples/test-pages/footnotes--numeric-anchor-id/: expected-metadata.json  expected.html  source.html
crates/fixtures/samples/test-pages/gmw/: expected-metadata.json
crates/fixtures/samples/test-pages/google-sre-book-1/: expected-metadata.json
crates/fixtures/samples/test-pages/herald-sun-1/: expected-metadata.json
crates/fixtures/samples/test-pages/iab-1/: expected-metadata.json
crates/fixtures/samples/test-pages/js-link-replacement/: expected-metadata.json
crates/fixtures/samples/test-pages/keep-tabular-data/: expected-metadata.json
crates/fixtures/samples/test-pages/la-nacion/: expected-metadata.json
crates/fixtures/samples/test-pages/lemonde-1/: expected-metadata.json
crates/fixtures/samples/test-pages/liberation-1/: expected-metadata.json
crates/fixtures/samples/test-pages/links-in-tables/: expected-metadata.json
crates/fixtures/samples/test-pages/lwn-1/: expected-metadata.json
crates/fixtures/samples/test-pages/math--katex/: expected-metadata.json  expected.html
crates/fixtures/samples/test-pages/math--mathjax-svg/: expected-metadata.json  expected.html
crates/fixtures/src/: main.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: ddg.rs  lib.rs  main.rs
crates/mcp/tests/: stdio.rs
crates/server/: Cargo.toml  README.md
crates/server/migrations/: 001_initial.sql
crates/server/src/: cache.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  rate_limit.rs  spam.rs
crates/server/src/routes/: .prettierrc  mod.rs  openapi.json  swagger.html
crates/wasm/: Cargo.toml  README.md  todo.md
crates/wasm/src/: lib.rs  types.d.ts
doc/: example.sh  example.txt  todo.txt  (+1 more)
(+287 files in other folders)
