[package]
name = "lectito-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "lectito-api"
path = "src/main.rs"

[dependencies]
axum = "0.8"
http = "1.3"
lectito = { path = "../core" }
reqwest = { version = "0.13.3", default-features = false, features = ["charset", "http2", "rustls"] }
redis = { version = "1.3.0", default-features = false, features = ["aio", "connection-manager", "script", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "limit", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
