[package]
name = "lectito-cli"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[bin]]
name = "lectito"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lectito-fixtures = { path = "../fixtures" }
lectito = { path = "../core" }
owo-colors = "4.2"
reqwest = { version = "0.13.3", features = ["blocking"] }
scraper.workspace = true
serde_json = "1.0"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.3"
shell-escape = "0.1"
