[package]
name = "lectito-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line article extraction and readability tools."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["readability", "article", "html", "markdown", "cli"]
categories = ["command-line-utilities", "text-processing"]

[features]
default = []
pdf = ["dep:pdf-writer", "dep:pulldown-cmark"]

[[bin]]
name = "lectito"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lectito = { path = "../core", version = "0.1.0" }
owo-colors = "4.2"
pdf-writer = { version = "0.14", optional = true }
pulldown-cmark = { version = "0.13", optional = true }
reqwest = { version = "0.13.3", features = ["blocking"] }
scraper.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sitemap = "0.4.1"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
lectito = { path = "../core", version = "0.1.0" }
clap_mangen = "0.3"
shell-escape = "0.1"
