[package]
name = "lectito"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
regex.workspace = true
thiserror.workspace = true

comrak = { version = "0.52.0", default-features = false }
kuchiki = "0.8"
once_cell = "1.19"
scraper.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
url = "2.5"

[dev-dependencies]
lectito-fixtures = { path = "../fixtures" }
serde_json = "1.0"
