[package]
name = "lectito-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lectito = { path = "../core" }
regex.workspace = true

scraper = "0.27.0"
serde_json = "1.0"
