[package]
name = "lectito-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local stdio MCP server for Lectito article search and reading."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["readability", "article", "mcp", "search", "cli"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
lectito = { path = "../core", version = "0.2.0" }
reqwest = { version = "0.13.3", default-features = false, features = ["charset", "http2", "rustls"] }
scraper.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tokio = { version = "1.48", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread"] }
url = "2.5"

[lints]
workspace = true
