[package]
name = "lectito-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lectito-server"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
deadpool-postgres = "0.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tokio-postgres = "0.7.17"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "cors", "compression-gzip"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
lectito-core = { path = "../core" }

[lints]
workspace = true
