[package]
name = "lectito-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.51.0"
tokio-postgres = "0.7.17"
tower = "0.5.3"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
lectito-core = { path = "../core" }

[lints]
workspace = true
