[package]
name = "lectito-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lectito-server"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
deadpool-postgres = "0.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.51.0", features = ["full"] }
tokio-postgres = { version = "0.7.17", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "cors", "compression-gzip"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
lectito-core = { path = "../core" }

[lints]
workspace = true
