[package]
name = "lectito-wasm"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "JavaScript and WebAssembly bindings for Lectito."
readme = "README.md"
keywords = ["readability", "markdown", "html", "wasm"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lectito = { path = "../core" }
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
