[package]
name = "lectito-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JavaScript and WebAssembly bindings for Lectito."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords = ["readability", "markdown", "html", "wasm"]
categories = ["wasm", "web-programming", "text-processing"]

[lib]
name = "lectito_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
lectito = { path = "../core", version = "0.1.0" }
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
